Initial commit for tfg

--- a/jocs/Dominator/Makefile
+++ b/jocs/Dominator/Makefile
@@ -1,5 +1,21 @@
-# Simplified Makefile for Dominator
-# Assumes g++ and make are available in PATH
+# To be able to play with the Dummy:
+#
+# 1) Copy one of:
+#
+# AIDummy.o.Linux64 (Linux   64 bits)
+# AIDummy.o.Linux32 (Linux   32 bits)
+# AIDummy.o.Win32   (Windows 32 bits)
+# AIDummy.o.Win64   (Windows 64 bits)
+# AIDummy.o.MacOS   (Mac)
+#
+# to AIDummy.o
+#
+# 2) Uncomment the following line.
+#
+#DUMMY_OBJ = AIDummy.o
+
+# Add here any extra .o player files you want to link to the executable
+EXTRA_OBJS =
 
 # Config
 OPTIMIZE = 2 # Optimization level (0 to 3)
@@ -7,22 +23,14 @@ DEBUG    = 0 # Compile for debugging (0 or 1)
 PROFILE  = 0 # Compile for profile (0 or 1)
 32BITS   = 0 # Produce 32 bits objects on 64 bits systems (0 or 1)
 
-# Platform detection
-ifeq ($(OS),Windows_NT)
-    EXE_EXT = .exe
-    RM = del /Q
-else
-    EXE_EXT = 
-    RM = rm -f
-endif
 
-# Compiler
-CXX = g++
+# Do not edit past this line
+############################
 
 # The following two lines will detect all your players (files matching "AI*.cc")
 
 PLAYERS_SRC = $(wildcard AI*.cc)
-PLAYERS_OBJ = $(patsubst %.cc, %.o, $(PLAYERS_SRC))
+PLAYERS_OBJ = $(patsubst %.cc, %.o, $(PLAYERS_SRC)) $(EXTRA_OBJS) $(DUMMY_OBJ)
 
 # Flags
 
@@ -30,11 +38,7 @@ ifeq ($(strip $(PROFILE)),1)
 	PROFILEFLAGS=-pg
 endif
 ifeq ($(strip $(DEBUG)),1)
-ifeq ($(PLATFORM),WINDOWS)
-	DEBUGFLAGS=$(DEBUGFLAGS_WIN)
-else
-	DEBUGFLAGS=$(DEBUGFLAGS_WIN)
-endif
+	DEBUGFLAGS=-DDEBUG -g -rdynamic
 endif
 ifeq ($(strip $(32BITS)),1)
 	ARCHFLAGS=-m32 -L/usr/lib32
@@ -46,22 +50,17 @@ LDFLAGS  = -std=c++11 -lm $(ARCHFLAGS) $(PROFILEFLAGS) $(DEBUGFLAGS) -O$(strip $
 
 # Rules
 
-all: Game$(EXE_EXT)
+all: Game 
 
 clean:
-	$(RM) Game$(EXE_EXT) SecGame$(EXE_EXT) *.o Makefile.deps
-
-# Run the game with default configuration (4 Demo players)
-run: Game$(EXE_EXT)
-	./Game$(EXE_EXT) --seed=123 Demo Demo Demo Demo --input=fixed1.cnf --output=game_output.out
-
+	rm -rf Game SecGame *.o *.exe Makefile.deps
 
 # Order of objects is important here to deactivate standard sleep function.
 
-Game$(EXE_EXT): Structs.o Settings.o State.o Info.o Random.o Board.o Action.o Player.o Registry.o Game.o Main.o $(PLAYERS_OBJ) Utils.o 
+Game: Structs.o Settings.o State.o Info.o Random.o Board.o Action.o Player.o Registry.o Game.o Main.o $(PLAYERS_OBJ) Utils.o 
 	$(CXX) $^ -o $@ $(LDFLAGS)
 
-SecGame$(EXE_EXT): Structs.o Settings.o State.o Info.o Random.o Board.o Action.o Player.o Registry.o SecGame.o SecMain.o Utils.o 
+SecGame: Structs.o Settings.o State.o Info.o Random.o Board.o Action.o Player.o Registry.o SecGame.o SecMain.o Utils.o 
 	$(CXX) $^ -o $@ $(LDFLAGS) -lrt
 
 %.exe: %.o Structs.o Settings.o State.o Info.o Random.o Board.o Action.o Player.o Registry.o SecGame.o SecMain.o Utils.o
